--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,4 +1,14 @@
-// text
+// container
+.container {
+    max-width: $max-width;
+    margin: auto;
+    overflow: hidden;
+    padding: 0 2rem;
+    margin-top: 6rem;
+    margin-bottom: 3rem;
+}
+
+// text style
 .x-large {
     font-size: 4rem;
     line-height: 1.2;
@@ -15,6 +25,15 @@
     font-size: 1.5rem;
     line-height: 1.2;
     margin-bottom: 1rem;
+}
+
+.text-primary {
+    color: $primary-color;
+}
+
+// image
+.round-img {
+border-radius: 50%;
 }
 
 // background
@@ -105,6 +124,30 @@
     }
 }
 
+// alerts
+.alert {
+    padding: 0.8rem;
+    margin: 1rem;
+    opacity: 0.9;
+    background: $light-color;
+    color: #333;
+
+    &.alert-primary {
+        @include set-background($primary-color);
+    }
+
+    &.alert-dark {
+        @include set-background($dark-color);
+    }
+
+    &.alert-success {
+        @include set-background($success-color);
+    }
+
+    &.alert-danger {
+        @include set-background($danger-color);
+    }
+}
 
 .dark-overlay {
     height: 100%;
