--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,7 +38,7 @@ img {
   position: fixed;
   z-index: 1;
   width: 100%;
-  top: 1;
+  top: 0;
   border-bottom: solid 1px $primary-color;
   opacity: 0.9;
 
@@ -73,6 +73,17 @@ img {
     justify-content: center;
     text-align: center;
   }
+}
+
+// profiles
+.profile {
+  display: grid;
+  grid-template-columns: 2fr 4fr 2fr;
+  grid-gap: 2rem;
+  align-items: center;
+  padding: 1rem;
+  line-height: 1.8rem;
+  margin-bottom: 1rem;
 }
 
 @import 'mobile';
