--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -6,7 +6,7 @@
     padding: 0 2rem;
     margin-top: 6rem;
     margin-bottom: 3rem;
-}
+  }
 
 // text style
 .x-large {
@@ -34,6 +34,12 @@
 // image
 .round-img {
 border-radius: 50%;
+}
+
+.line {
+    height: 1px;
+    background: #ccc;
+    margin: 1.5rem 0;
 }
 
 // background
@@ -146,6 +152,43 @@ border-radius: 50%;
 
     &.alert-danger {
         @include set-background($danger-color);
+    }
+}
+
+// badges
+.badge {
+    font-size: 0.8rem;
+    padding: 0.1rem;
+    text-align: center;
+    margin: 0.3rem;
+    background: $light-color;
+    color: #333;
+
+    &.badge-primary {
+        @include set-background($primary-color);
+    }
+
+    &.badge-dark {
+        @include set-background($dark-color);
+    }
+
+    &.badge-success {
+        @include set-background($success-color);
+    }
+
+    &.badge-danger {
+        @include set-background($danger-color);
+    }
+}
+
+// table
+.table {
+    th, td {
+        padding: 1rem;
+        text-align: left;
+    }
+    th {
+        background: $light-color;
     }
 }
 
