--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -7,6 +7,7 @@
     margin-top: 8rem;
   }
 
+  // Text Styles
   .x-large {
     font-size: 3rem;
   }
@@ -19,7 +20,7 @@
     font-size: 1rem;
   }
 
-  // navbar
+  // Navbar
   .navbar {
     display: block;
     text-align: center;
@@ -31,6 +32,82 @@
 
     h1 {
       margin-bottom: 1rem;
+    }
+  }
+
+  .dash-buttons a {
+    display: block;
+    width: 100%;
+    margin-bottom: 0.2rem;
+  }
+
+  // Profiles
+  .profile {
+    grid-template-columns: 1fr;
+    text-align: center;
+    align-items: center;
+    justify-items: center;
+
+    img {
+      width: 60%;
+    }
+
+    ul {
+      display: none;
+    }
+  }
+
+  .profile-grid {
+    grid-template-areas:
+      'top'
+      'about'
+      'exp'
+      'edu'
+      'github';
+
+      .profile-top {
+        grid-area: top;
+        display: flex;
+
+        & > div:first-child {
+          img {
+            width: 150px;
+          }
+        }
+      
+      }
+
+      .profile-about {
+        grid-area: about;
+        display: flex;
+      }
+
+      .profile-exp {
+        grid-area: exp;
+        display: flex;
+      }
+
+      .profile-edu {
+        grid-area: edu;
+        display: flex;
+      }
+      .profile-github {
+        grid-area: github;
+        display: flex;
+      }
+  }
+
+  .profile-about {
+    .skills {
+      flex-direction: column;
+    }
+  }
+
+  .post {
+    grid-template-columns: 1fr;
+    a,
+    button {
+      padding: 0.3rem 0.4rem;
     }
   }
 }
